added update handler
