# docs/swagger.json
@@ -49,13 +49,64 @@
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/api.errorWrapper"
+                            "$ref": "#/definitions/utils.errorWrapper"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/api.errorWrapper"
+                            "$ref": "#/definitions/utils.errorWrapper"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Returns User that's the current user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Update Current User",
+                "parameters": [
+                    {
+                        "description": "updateUserRequest",
+                        "name": "updateUserRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.updateUserRequest"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "With the bearer started",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.profileResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/utils.errorWrapper"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.errorWrapper"
                         }
                     }
                 }
@@ -95,13 +146,13 @@
                     "422": {
                         "description": "Unprocessable Entity",
                         "schema": {
-                            "$ref": "#/definitions/api.errorWrapper"
+                            "$ref": "#/definitions/utils.errorWrapper"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/api.errorWrapper"
+                            "$ref": "#/definitions/utils.errorWrapper"
                         }
                     }
                 }
@@ -141,13 +192,13 @@
                     "422": {
                         "description": "Unprocessable Entity",
                         "schema": {
-                            "$ref": "#/definitions/api.errorWrapper"
+                            "$ref": "#/definitions/utils.errorWrapper"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/api.errorWrapper"
+                            "$ref": "#/definitions/utils.errorWrapper"
                         }
                     }
                 }
@@ -175,25 +226,6 @@
                 },
                 "password": {
                     "type": "string"
-                }
-            }
-        },
-        "api.errorWrapper": {
-            "type": "object",
-            "properties": {
-                "errors": {
-                    "$ref": "#/definitions/api.errors"
-                }
-            }
-        },
-        "api.errors": {
-            "type": "object",
-            "properties": {
-                "body": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
                 }
             }
         },
@@ -241,6 +273,26 @@
                 }
             }
         },
+        "api.updateUserRequest": {
+            "type": "object",
+            "properties": {
+                "bio": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "api.userResponse": {
             "type": "object",
             "properties": {
@@ -258,6 +310,25 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "utils.errorWrapper": {
+            "type": "object",
+            "properties": {
+                "errors": {
+                    "$ref": "#/definitions/utils.errors"
+                }
+            }
+        },
+        "utils.errors": {
+            "type": "object",
+            "properties": {
+                "body": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         }
