# internal/user/transport/http/handlers.go
@@ -20,8 +20,8 @@ type api struct {
 // @Produce      json
 // @Param        authenticationRequest   body      authenticationRequest  true  "authenticationRequest"
 // @Success      200  {object}  authResponse
-// @Failure      422  {object}  errorWrapper
-// @Failure      500  {object}  errorWrapper
+// @Failure      422  {object}  utils.errorWrapper
+// @Failure      500  {object}  utils.errorWrapper
 // @Router       /api/users/login [post]
 func (a api) Authentication(w http.ResponseWriter, r *http.Request) {
 
@@ -58,11 +58,11 @@ func (a api) Authentication(w http.ResponseWriter, r *http.Request) {
 // @Produce      json
 // @Param        registrationRequest   body      registrationRequest  true  "registrationRequest"
 // @Success      200  {object}  authResponse
-// @Failure      422  {object}  errorWrapper
-// @Failure      500  {object}  errorWrapper
+// @Failure      422  {object}  utils.errorWrapper
+// @Failure      500  {object}  utils.errorWrapper
 // @Router       /api/users/registration [post]
 func (a api) Registration(w http.ResponseWriter, r *http.Request) {
-	//TODO implement me
+
 	var dest registrationRequest
 
 	err := readAndValidate(r, &dest, *a.validator)
@@ -96,8 +96,8 @@ func (a api) Registration(w http.ResponseWriter, r *http.Request) {
 // @Produce      json
 // @Param Authorization header string true "With the bearer started"
 // @Success      200  {object}  profileResponse
-// @Failure      401  {object}  errorWrapper
-// @Failure      500  {object}  errorWrapper
+// @Failure      401  {object}  utils.errorWrapper
+// @Failure      500  {object}  utils.errorWrapper
 // @Router       /api/user [get]
 func (a api) GetCurrentUser(w http.ResponseWriter, r *http.Request) {
 	user, err := a.userService.GetCurrentUser(r.Context())
@@ -116,9 +116,57 @@ func (a api) GetCurrentUser(w http.ResponseWriter, r *http.Request) {
 
 }
 
+// UpdateUser godoc
+// @Summary      Update Current User
+// @Description  Returns User that's the current user
+// @Tags         user
+// @Accept       json
+// @Produce      json
+// @Param        updateUserRequest   body      updateUserRequest  true  "updateUserRequest"
+// @Param Authorization header string true "With the bearer started"
+// @Success      200  {object}  profileResponse
+// @Failure      401  {object}  utils.errorWrapper
+// @Failure      500  {object}  utils.errorWrapper
+// @Router       /api/user [put]
 func (a api) UpdateUser(w http.ResponseWriter, r *http.Request) {
-	//TODO implement me
-	panic("implement me")
+	var dest updateUserRequest
+
+	err := readAndValidate(r, &dest, *a.validator)
+	if err != nil {
+		utils.ErrResp(w, http.StatusUnprocessableEntity, err)
+		return
+	}
+
+	forUpdate := make(map[string]any, 5)
+	if dest.Username != nil {
+		forUpdate["username"] = *dest.Username
+	}
+	if dest.Password != nil {
+		forUpdate["password"] = *dest.Password
+	}
+	if dest.Email != nil {
+		forUpdate["email"] = *dest.Email
+	}
+	if dest.Image != nil {
+		forUpdate["image"] = *dest.Image
+	}
+	if dest.Bio != nil {
+		forUpdate["bio"] = *dest.Bio
+	}
+
+	user, err := a.userService.UpdateUser(r.Context(), forUpdate)
+	if err != nil {
+		utils.ErrResp(w, http.StatusInternalServerError, err)
+		return
+	}
+	utils.Resp(w, profileResponse{
+		Profile: profile{
+			Username:  user.Username,
+			Bio:       user.Bio,
+			Image:     user.Image,
+			Following: false,
+		},
+	})
 }
 
 func (a api) GetProfile(w http.ResponseWriter, r *http.Request) {
