# internal/user/transport/http/requests.go
@@ -15,6 +15,18 @@ type registrationRequest struct {
 	Password string `json:"password" validate:"required"`
 }
 
+type updateUserRequest struct {
+	Username *string `json:"username"`
+	Email    *string `json:"email" validate:"omitempty,email"`
+	Password *string `json:"password"`
+	Image    *string `json:"image"`
+	Bio      *string `json:"bio"`
+}
+
+func (r updateUserRequest) validate(v validator.Validate) error {
+	return v.Struct(&r)
+}
+
 func (r authenticationRequest) validate(v validator.Validate) error {
 	return v.Struct(&r)
 }
